samples/_failures_safe/1761561222_1dfdb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_789e60ac.c: In function ‘calculate_stats’:
./samples/SAFE/__tmp_789e60ac.c:121:5: error: expected declaration or statement at end of input
  121 |     for (int i = 0; i < 4; i++) {
      |     ^~~
./samples/SAFE/__tmp_789e60ac.c:121:5: error: expected declaration or statement at end of input
